--- a/requirements.txt
+++ b/requirements.txt
@@ -3,10 +3,12 @@ langchainhub
 bs4
 tiktoken
 openai
-boto3==1.34.37
+boto3
 langchain_community
 chromadb
 awscli
 streamlit
 pypdf
 faiss-cpu
+langchain-aws
+dotenv
