--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,11 +35,37 @@ jobs:
       - name: Run unit tests
         run: |
           echo "Running unit tests..."
+  
+  push-image:
+    needs: [integration]
+    runs-on: ubuntu-latest
+    steps:
+    - name: Repo Checkout
+      uses: actions/checkout@v2
+
+    - name: Login to Docker hub
+      env:
+        DOCKER_USER: ${{ secrets.DOCKER_USER_NAME }}
+        DOCKER_PASSWORD: ${{ secrets.DOCKER_PASS_TOKEN }}
+      run: docker login -u $DOCKER_USER -p $DOCKER_PASSWORD 
+
+    - name: Build the Docker image for Fastapi app
+      env:
+        DOCKER_USER: ${{ secrets.DOCKER_USER_NAME }}
+      run: docker build . -f Dockerfile -t $DOCKER_USER/mymodel:v1
+
+    - name: Push the Docker Image
+      env:
+        DOCKER_USER: ${{ secrets.DOCKER_USER_NAME }}
+      run: docker push $DOCKER_USER/mymodel:v1
+
+    - name: Logout to Docker hub
+      run: docker logout
 
   build-and-push-ecr-image:
     name: Build and Push ECR Image
     runs-on: ubuntu-latest
-    needs: integration
+    needs: push-image
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
