--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -63,17 +63,23 @@ jobs:
       run: docker logout
 
   build-and-push-ecr-image:
-    name: Build and Push ECR Image
+    name: Continous Delivery
     runs-on: ubuntu-latest
     needs: push-image
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
+      
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ${{ secrets.AWS_DEFAULT_REGION }}
 
-      - name: Install Utility Dependencies
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y jq unzip
+      - name: Log in to Amazon ECR
+        id: ecr-login
+        uses: aws-actions/amazon-ecr-login@v1
 
       - name: Build, tag , and push image to amazon ecr
         id: build-image
